Created the base home app

--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="{% static 'style.css' %}">
 
 
-        <title>{% block title %}{% endblock title %}</title>
+        <title>Blog-{% block title %}{% endblock title %}</title>
     </head>
     <body>
         <header>
