--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -6,14 +6,14 @@
             <div class="container">
                 <ul class="navbar-nav">
                     <li class="nav-item ml-auto active">
-                        <a class="nav-link py-1" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link py-1" href="{% url 'home:home' %}">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown ml-auto">
                         <a class="nav-link py-1 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Account
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Profile</a>
+                            <a class="dropdown-item" href="{% url 'accounts:view_profile' %}">Profile</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Logout</a>
                         </div>
