--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -6,10 +6,12 @@
             <div class="container">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link py-1" href="{% url 'home:home' %}">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link py-1" href="{% url 'home:home' %}">
+                            Home<span class="sr-only">(current)</span>
+                        </a>
                     </li>
-                    <li class="nav-item dropdown ml-auto">
-                        {% if user.is_authenticated %}
+                    {% if user.is_authenticated %}
+                        <li class="nav-item dropdown ml-auto">
                             <a class="nav-link py-1 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 {{ user.username }}
                             </a>
@@ -19,15 +21,15 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Logout</a>
                             </div>
-                        {% else %}
-                            <li class="nav-item">
-                                <a class="nav-link py-1" href="#">Register</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link py-1" href="#">Login</a>
-                            </li>
-                        {% endif %}
-                    </li>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link py-1" href="#">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link py-1" href="#">Login</a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
