--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -10,14 +10,14 @@
                             Home<span class="sr-only">(current)</span>
                         </a>
                     </li>
-                    {% if user.is_authenticated %}
+                    {% if not request.user.is_anonymous %}
                         <li class="nav-item dropdown ml-auto">
                             <a class="nav-link py-1 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                {{ user.username }}
+                                {{ request.user.username }}
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{% url 'view_account' username=user.username %}">My Account</a>
-                                <a class="dropdown-item" href="{% url 'view_account_info' username=user.username %}">Account Info</a>
+                                <a class="dropdown-item" href="{% url 'view_account' user.userprofile.slug %}">My Account</a>
+                                <a class="dropdown-item" href="{% url 'view_account_info' user.userprofile.slug %}">Account Info</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Logout</a>
                             </div>
