--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -16,8 +16,8 @@
                                 {{ request.user.username }}
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{% url 'view_account' user.userprofile.slug %}">My Account</a>
-                                <a class="dropdown-item" href="{% url 'view_account_info' user.userprofile.slug %}">Account Info</a>
+                                <a class="dropdown-item" href="{% url 'view_account' request.user.userprofile.slug %}">My Account</a>
+                                <a class="dropdown-item" href="{% url 'view_account_info' request.user.userprofile.slug %}">Account Info</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Logout</a>
                             </div>
