Added a css class for the user registeration form

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -3,9 +3,11 @@
     Registeration
 {% endblock title %}
 {% block content %}
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Sign Up</button>
-    </form>
+    <div class="content-section">
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-outline-primary" type="submit">Sign Up</button>
+        </form>
+    </div>
 {% endblock content %}
