--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -20,6 +20,14 @@
             {% include "navbar.html" %}
         </header>
         <main class="container">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+
             {% block content %}{% endblock content %}
         </main>
 
