--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block title %}
     Registeration
 {% endblock title %}
@@ -6,8 +7,18 @@
     <div class="content-section">
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btn btn-outline-primary" type="submit">Sign Up</button>
+            <fieldset class="form-group">
+                <legend class="border-bottom pb-2">Join Post It today!</legend>
+                {{ form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-primary btn-block" type="submit">Sign Up</button>
+            </div>
         </form>
+        <div class="text-right">
+            <small>
+                Already have an account? <a href="#">Login</a>
+            </small>
+        </div>
     </div>
 {% endblock content %}
