--- a/accounts/templates/accounts/view_account_info.html
+++ b/accounts/templates/accounts/view_account_info.html
@@ -8,6 +8,21 @@
             <table class="table">
                 <tbody>
                     <tr>
+                        <th scope="row">Username</th>
+                        <td>{{ user.username }}</td>
+                        <td><a href="#">Edit</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">First Name</th>
+                        <td>{{ user.first_name.capitalize }}</td>
+                        <td><a href="#">Edit</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Last Name</th>
+                        <td>{{ user.last_name.capitalize }}</td>
+                        <td><a href="#">Edit</a></td>
+                    </tr>
+                    <tr>
                         <th scope="row">Email</th>
                         <td>{{ user.email|default:'Not Provided' }}</td>
                         <td><a href="#">Edit</a></td>
