--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -22,7 +22,7 @@
         <main class="container">
             {% if messages %}
                 {% for message in messages %}
-                    <div class="alert alert-{{ message.tags }}">
+                    <div class="alert alert-{{ message.tags }} text-center">
                         {{ message }}
                     </div>
                 {% endfor %}
