--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -5,28 +5,41 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="container">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link py-1" href="{% url 'home:home' %}">
-                            Home<span class="sr-only">(current)</span>
-                        </a>
-                    </li>
                     {% if not request.user.is_anonymous %}
-                        <li class="nav-item dropdown ml-auto">
+                        <li class="nav-item active mr-auto">
+                            <a class="nav-link" href="{% url 'home:home' %}">
+                                Home
+                            </a>
+                        </li>
+                        <!-- <li class="nav-item dropdown ml-auto">
                             <a class="nav-link py-1 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 {{ request.user.username }}
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{% url 'view_account' request.user.userprofile.slug %}">My Account</a>
-                                <a class="dropdown-item" href="{% url 'view_account_info' request.user.userprofile.slug %}">Account Info</a>
+                                <a class="dropdown-item" href="">My Account</a>
+                                <a class="dropdown-item" href="">Account Info</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">Logout</a>
                             </div>
+                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'view_account' request.user.userprofile.slug %}">
+                                {{ request.user.username }}
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'view_account_info' request.user.userprofile.slug %}">
+                                Account Info
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Log Out</a>
                         </li>
                     {% else %}
-                        <li class="nav-item">
+                        <li class="nav-item mr-auto">
                             <a class="nav-link py-1" href="#">Register</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item ml-auto">
                             <a class="nav-link py-1" href="#">Login</a>
                         </li>
                     {% endif %}
