--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -11,17 +11,6 @@
                                 Home
                             </a>
                         </li>
-                        <!-- <li class="nav-item dropdown ml-auto">
-                            <a class="nav-link py-1 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                {{ request.user.username }}
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="">My Account</a>
-                                <a class="dropdown-item" href="">Account Info</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Logout</a>
-                            </div>
-                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'view_account' request.user.userprofile.slug %}">
                                 {{ request.user.username }}
@@ -33,14 +22,14 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Log Out</a>
+                            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                         </li>
                     {% else %}
                         <li class="nav-item mr-auto">
-                            <a class="nav-link py-1" href="#">Register</a>
+                            <a class="nav-link py-1" href="{% url 'register' %}">Register</a>
                         </li>
                         <li class="nav-item ml-auto">
-                            <a class="nav-link py-1" href="#">Login</a>
+                            <a class="nav-link py-1" href="{% url 'login' %}">Login</a>
                         </li>
                     {% endif %}
                 </ul>
