Fixed links to login and register for anonyomous user

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -14,5 +14,10 @@
                 <button class="btn btn-outline-primary">Sign In</button>
             </div>
         </form>
+        <div class="text-right">
+            New to <span class="site-name">Post It</span>?
+            <a href="{% url 'register' %}">Create an account</a>.
+
+        </div>
     </div>
 {% endblock content %}
