Renamed the UserProfile Model to be Profile

--- a/accounts/templates/accounts/view_account.html
+++ b/accounts/templates/accounts/view_account.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="row text-center mb-2">
         <div class="col-12 mb-2">
-            <img class="profile_pic" src="{{ user.userprofile.image.url }}">
+            <img class="profile_pic" src="{{ user.profile.image.url }}">
         </div>
         <div class="col-12">
             {% if user.get_full_name %}
