--- a/accounts/templates/accounts/view_account_info.html
+++ b/accounts/templates/accounts/view_account_info.html
@@ -29,27 +29,27 @@
                     </tr>
                     <tr>
                         <th scope="row">Linkedin Profile</th>
-                        <td>{{ user.userprofile.linkedin|default:'Not Provided' }}</td>
+                        <td>{{ user.profile.linkedin|default:'Not Provided' }}</td>
                         <td><a href="#">Edit</a></td>
                     </tr>
                     <tr>
                         <th scope="row">Country</th>
-                        <td>{{ user.userprofile.country.name|default:'Not Provided' }}</td>
+                        <td>{{ user.profile.country.name|default:'Not Provided' }}</td>
                         <td><a href="#">Edit</a></td>
                     </tr>
                     <tr>
                         <th scope="row">City</th>
-                        <td>{{ user.userprofile.city.title |default:'Not Provided' }}</td>
+                        <td>{{ user.profile.city.title |default:'Not Provided' }}</td>
                         <td><a href="#">Edit</a></td>
                     </tr>
                     <tr>
                         <th scope="row">Gender</th>
-                        <td>{{ user.userprofile.display_gender|default_if_none:'Not Provided' }}</td>
+                        <td>{{ user.profile.display_gender|default_if_none:'Not Provided' }}</td>
                         <td><a href="#">Edit</a></td>
                     </tr>
                     <tr>
                         <th scope="row">Joined</th>
-                        <td> {{ user.userprofile.created|date:'M 23, Y '|default_if_none:'Not Provided' }}</td>
+                        <td> {{ user.profile.created|date:'M 23, Y '|default_if_none:'Not Provided' }}</td>
                         <td></td>
                     </tr>
                 </tbody>
