--- a/accounts/templates/accounts/view_account_info.html
+++ b/accounts/templates/accounts/view_account_info.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-    {{ user.username }}
+    {{ user.username }} Info
 {% endblock title %}
 {% block content %}
     <div class="content-section">
