--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -17,7 +17,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'accounts:view_account_info' request.user.profile.slug %}">
+                            <a class="nav-link" href="{% url 'accounts:view_account_info' %}">
                                 Account Info
                             </a>
                         </li>
