--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -13,11 +13,11 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'accounts:view_account' request.user.profile.slug %}">
-                                {{ request.user.username }}
+                                Account
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'accounts:view_account_info' %}">
+                            <a class="nav-link" href="{% url 'accounts:view_update_account' %}">
                                 Account Info
                             </a>
                         </li>
