--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -3,5 +3,5 @@
     Home
 {% endblock title %}
 {% block content %}
-    <h1>Home Page</h1>
+    <h1 class="text-center">Home Page</h1>
 {% endblock content %}
