Added the POST funcionality for the home's Post form

--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -1,20 +1,9 @@
 {% extends "base.html" %}
-{% load crispy_forms_tags %}
 {% block title %}
     Home
 {% endblock title %}
 {% block content %}
-    <form method="POST">
-        {% csrf_token %}
-        <fieldset class="form-group">
-            {% crispy form %}
-        </fieldset>
-        <div class="form-group text-center">
-            <button class="btn btn-primary" type="submit">
-                Post
-            </button>
-        </div>
-    </form>
+    {% include "posts/_post_form_base.html" %}
     {% for post in posts %}
         {% include "posts/_post_base.html" %}
     {% endfor %}
