Created the User's page with the their own posts appearing

--- a/accounts/templates/accounts/view_account.html
+++ b/accounts/templates/accounts/view_account.html
@@ -20,7 +20,8 @@
         <button class="btn btn-primary">Follow</button>
         <a href="#" class="btn btn-secondary">About</a>
     </div>
-    <div class="content-section">
-        <h1>User's Posts will appear here.</h1>
+    {% for post in posts %}
+        {% include "posts/_post_base.html" %}
+    {% endfor %}
     </div>  
 {% endblock content %}
