Changed the Post Model created and updated fields

--- a/posts/templates/posts/_post_base.html
+++ b/posts/templates/posts/_post_base.html
@@ -16,7 +16,7 @@
             <small>
                 Posted at: 
                 <span class="post-meta">
-                    {{ post.created }}
+                    {{ post.date_posted }}
                 </span>
             </small>
         </div>
