--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -9,6 +9,9 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 {{ form|crispy }}
+                <small class="pl-2">
+                        <a href="{% url 'password_reset' %}">Forogt Password?</a>
+                    </small>
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-primary">Sign In</button>
@@ -17,7 +20,6 @@
         <div class="text-right">
             New to <span class="site-name">Post It</span>?
             <a href="{% url 'register' %}">Create an account</a>.
-
         </div>
     </div>
 {% endblock content %}
