Default text when user or home page doesn't have any posts

--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -15,8 +15,14 @@
             </button>
         </div>
     </form>
-    {% for post in posts %}
-        {% include "posts/_post_base.html" %}
-    {% endfor %}
+    {% if posts %}
+        {% for post in posts %}
+            {% include "posts/_post_base.html" %}
+        {% endfor %}
+    {% else %}
+        <div class="content-section text-center">
+            <h1>There are no posts yet...</h1>
+        </div>
+    {% endif %}
     {% include "posts/_paginations.html" with page=posts %}
 {% endblock content %}
