--- a/accounts/templates/accounts/view_account.html
+++ b/accounts/templates/accounts/view_account.html
@@ -25,8 +25,14 @@
         <button class="btn btn-primary">Follow</button>
         <a href="#" class="btn btn-secondary">About</a>
     </div>
-    {% for post in posts %}
-        {% include "posts/_post_base.html" %}
-    {% endfor %}
+    {% if posts %}
+        {% for post in posts %}
+            {% include "posts/_post_base.html" %}
+        {% endfor %}
+    {% else %}
+        <div class="content-section text-center">
+            <h3>{{ user.username }} has no posts yet...</h3>
+        </div>
+    {% endif %}
     {% include "posts/_paginations.html" with page=posts %}
 {% endblock content %}
