--- a/posts/templates/posts/view_post.html
+++ b/posts/templates/posts/view_post.html
@@ -1,7 +1,36 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block title %}
     {{ post.title }}
 {% endblock title %}
 {% block content %}
     {% include "posts/_post_base.html" %}
+    <form method="POST">
+        {% csrf_token %}
+        <div class="form-group">
+            {{ form|crispy }}
+            <button class="btn btn-outline-info" type="submit">
+                Comment
+            </button>
+        </div>
+    </form>
+    <div class="row mb-4">
+        <div class="col-6">
+            <ul class="list-group">
+                <li class="list-group-item text-center">Comments</li>
+                    {% if post.comments.all %}
+                        {% for comment in post.comments.all %}
+                            <li class="list-group-item">
+                                {% include "posts/_comment_base.html" %}
+                            </li>
+                        {% endfor %}
+                    {% else %}
+                        <li class="list-group-item text-center">
+                            This post has not comments yet...
+                        </li>
+                    {% endif %}
+                </ul>
+        </div>
+        <div class="col-6"></div>
+    </div>
 {% endblock content %}
