Changed the content appearing on homepage
1. Only the posts posted by the accounts followed by the current user will appear on the home page.
2. Right Sidebar will contain the posts with the most number of comments.
3. links to accounts in the following/followers lists have been set.

--- a/accounts/templates/accounts/followers.html
+++ b/accounts/templates/accounts/followers.html
@@ -15,7 +15,9 @@
         {% if followers_list %}
             {% for profile in followers_list %}
                 <li class="list-group-item">
-                    {{ profile.user.username }}
+                    <a href="{% url 'accounts:view_account' profile.slug %}">
+                        {{ profile.user.username }}
+                    </a>
                 </li>
             {% endfor %}
         {% else %}
