--- a/posts/templates/posts/home.html
+++ b/posts/templates/posts/home.html
@@ -4,25 +4,51 @@
     Home
 {% endblock title %}
 {% block content %}
-    <form method="POST">
-        {% csrf_token %}
-        <fieldset class="form-group">
-            {{ form|crispy }}
-        </fieldset>
-        <div class="form-group text-center">
-            <button class="btn btn-primary" type="submit">
-                Post
-            </button>
+    <div class="row">
+        <div class="col-8">
+            <form method="POST">
+                {% csrf_token %}
+                <fieldset class="form-group">
+                    {{ form|crispy }}
+                </fieldset>
+                <div class="form-group text-center">
+                    <button class="btn btn-primary" type="submit">
+                        Post
+                    </button>
+                </div>
+            </form>
+            {% if posts %}
+                {% for post in posts %}
+                    {% include "posts/_post_base.html" %}
+                {% endfor %}
+                {% include "posts/_paginations.html" with page=posts %}
+            {% else %}
+                <div class="content-section text-center">
+                    <h1>There are no posts yet...</h1>
+                </div>
+            {% endif %}
         </div>
-    </form>
-    {% if posts %}
-        {% for post in posts %}
-            {% include "posts/_post_base.html" %}
-        {% endfor %}
-        {% include "posts/_paginations.html" with page=posts %}
-    {% else %}
-        <div class="content-section text-center">
-            <h1>There are no posts yet...</h1>
+        <div class="col-4">
+            <ul class="list-group">
+                <li class="list-group-item text-center">Most Commented Posts</li>
+                {% for post in most_popular_posts %}
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col-12">
+                                <a href="{% url 'posts:view_post' post.slug %}">
+                                    {{ post.title }}
+                                </a>
+                            </div>
+                            <div class="col-12">
+                                {{ post.comments.count }} comments
+                            </div>
+                            <div class="col-12 text-right">
+                                <a class="text-right" href="{% url 'accounts:view_account' post.user.profile.slug %}">{{ post.user }}</a>
+                            </div>
+                        </div>
+                    </li>
+                {% endfor %}
+            </ul>
         </div>
-    {% endif %}
+    </div>
 {% endblock content %}
