--- a/accounts/templates/accounts/following.html
+++ b/accounts/templates/accounts/following.html
@@ -15,7 +15,10 @@
         {% if following_list %}
             {% for profile in following_list %}
                 <li class="list-group-item">
-                    {{ profile.user.username }}
+                    <a href="{% url 'accounts:view_account' profile.slug %}">
+                        {{ profile.user.username }}
+                    </a>
+
                 </li>
             {% endfor %}
         {% else %}
