Fixe empty following list text

--- a/accounts/templates/accounts/following.html
+++ b/accounts/templates/accounts/following.html
@@ -23,7 +23,7 @@
             {% endfor %}
         {% else %}
             <li class="list-group-item">
-                    {{ user.username }} has no followers yet.
+                    {{ user.username }} doesn't follow anyone yet.
             </li>
         {% endif %}
     </ul>
