--- a/accounts/templates/accounts/view_account.html
+++ b/accounts/templates/accounts/view_account.html
@@ -4,22 +4,8 @@
     {{ user.username }}
 {% endblock title %}
 {% block content %}
-    <div class="row text-center mb-2">
-        <div class="col-12 mb-2">
-            {% if user.profile.image %}
-                <img class="profile-pic" src="{{ user.profile.image.url }}">
-            {% else %}
-                <img class="profile-pic" src="/media/default.jpg">
-            {% endif %}
-        </div>
-        <div class="col-12">
-            {% if user.get_full_name %}
-                {{ user.get_full_name }}
-            {% endif %}
-        </div>
-        <div class="col-12">
-            (@{{ user.username }})
-        </div>
+    <div class="row text-center mb-4">
+        {% include "accounts/_account_header.html" %}
         <div class="col-12">
             <a href="{% url 'accounts:view_following_or_followers' slug=user.profile.slug req='following' %}">Following</a>
         </div>
