--- a/accounts/templates/accounts/following.html
+++ b/accounts/templates/accounts/following.html
@@ -3,14 +3,12 @@
     {{ user.username }} Following List
 {% endblock title %}
 {% block content %}
+    <div class="row text-center mb-4">
+        {% include "accounts/_account_header.html" %}
+    </div>
     <ul class="list-group text-center">
         <li class="list-group-item">
-            <span>
-                <a href="{% url 'accounts:view_account' user.profile.slug %}">
-                    {{ user.username }}
-                </a>
-            </span> 
-            (Following)
+            Followers
         </li>
         {% if following_list %}
             {% for profile in following_list %}
@@ -18,7 +16,6 @@
                     <a href="{% url 'accounts:view_account' profile.slug %}">
                         {{ profile.user.username }}
                     </a>
-
                 </li>
             {% endfor %}
         {% else %}
