--- a/accounts/templates/accounts/view_update_account.html
+++ b/accounts/templates/accounts/view_update_account.html
@@ -6,13 +6,7 @@
 {% block content %}
     <div class="content-section">
         <div class="row text-center mb-4">
-            <div class="col-12 mb-2">
-                {% if user.profile.image %}
-                    <img class="profile-pic" src="{{ user.profile.image_url }}">
-                {% else %}
-                    <img class="profile-pic" src="/media/default.jpg">
-                {% endif %}
-            </div>
+            {% include "accounts/_account_header.html" %}
         </div>
         <h3 class="text-center py-2">Personal Information</h3>
         <form method="POST" enctype="multipart/form-data">
