--- a/base/static/style.css
+++ b/base/static/style.css
@@ -38,9 +38,13 @@ body {
     text-decoration: none;
 }
 
+.sidebar-post-title {
+    font-size: 0.9rem;
+}
+
 /* #Responsiveness# */
-h1 { font-size: 2rem; }
-h2 { font-size: 1.8rem; }
+h1 { font-size: 1,8rem; }
+h2 { font-size: 1.6rem; }
 h3 { font-size: 1.4rem; }
 tr { font-size: 1rem; }
 .navbar-toggler  .navbar-toggler-icon {font-size: 0.5rem; }
