--- a/base/templates/navbar.html
+++ b/base/templates/navbar.html
@@ -4,9 +4,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="container">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav text-center">
                     {% if not request.user.is_anonymous %}
-                        <li class="nav-item active mr-auto">
+                        <li class="nav-item active mr-sm-auto">
                             <a class="nav-link" href="{% url 'posts:home' %}">
                                 Home
                             </a>
@@ -25,10 +25,10 @@
                             <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
                         </li>
                     {% else %}
-                        <li class="nav-item mr-auto">
+                        <li class="nav-item mr-sm-auto">
                             <a class="nav-link py-1" href="{% url 'register' %}">Register</a>
                         </li>
-                        <li class="nav-item ml-auto">
+                        <li class="nav-item">
                             <a class="nav-link py-1" href="{% url 'login' %}">Login</a>
                         </li>
                     {% endif %}
