--- a/posts/templates/posts/_post_base.html
+++ b/posts/templates/posts/_post_base.html
@@ -1,4 +1,4 @@
-<div class="content-section post">
+<div class="content-section post mr-0">
     <h2 class="post-title"><a href="{% url 'posts:view_post' post.slug %}">{{ post.title }}</a></h2>
     {% if request.user == post.user %}
         <a href="{% url 'posts:edit_post' post.slug %} " class="btn btn-info btn-sm">
